2020-01-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Avoid recursive entry

	to an idle callback. It happens because of a call to
	libbalsa_progress_set_fraction(), which then results in a call
	to gtk_main_iteration_do(); the current event is apparently
	still in the queue, so it gets re-entered.

	The progress indicator needs to be rethought!

	* src/main-window.c (bw_real_open_mbnode_idle_cb),
	(balsa_window_real_open_mbnode):

2020-01-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	libbalsa-mailbox: Pack booleans in contiguous 1-bit fields

	It saves run-time storage, and also reduces binary code size (at
	least on x-86-64, with gcc -O2).
	Small differences in both cases!

	* libbalsa/mailbox.c (libbalsa_mailbox_set_msg_tree_changed),
	(libbalsa_mailbox_set_is_directory),
	(libbalsa_mailbox_set_readonly),
	(libbalsa_mailbox_set_no_reassemble),
	(libbalsa_mailbox_set_has_unread_messages),
	(libbalsa_mailbox_set_messages_loaded),
	(libbalsa_mailbox_set_messages_threaded): Make sure that
	gboolean arguments really are boolean.

2020-01-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix expand-on-open

	See https://mail.gnome.org/archives/balsa-list/2019-August/msg00008.html
	Because of a race among idle callbacks, we could call
	gtk_tree_view_expand_all() before the message tree was populated
	and threaded. So when it was populated and threaded, threads
	were in the default state, collapsed.

	* libbalsa/mailbox.c (libbalsa_mailbox_close), (lbm_set_threading),
	(libbalsa_mailbox_get_messages_loaded),
	(libbalsa_mailbox_get_messages_threaded),
	(libbalsa_mailbox_set_has_unread_messages),
	(libbalsa_mailbox_set_messages_loaded),
	(libbalsa_mailbox_set_messages_threaded): add messages_loaded
	and messages_threaded members to the private structure, and
	manage access to them;
	* libbalsa/mailbox.h: add accessors;
	* libbalsa/mailbox_imap.c (libbalsa_mailbox_imap_set_threading):
	set messages_threaded;